--- a/src/language/ru/translation.json
+++ b/src/language/ru/translation.json
@@ -16,7 +16,7 @@
   "header": {
     "header_subtitle": "Электроника и бытовая техника",
     "work_time": "Рабочие часы",
-    "work_hours": "Понедельник - Пятница: 09:00 - 18:00; Суббота: 09:00 - 13:00",
+    "work_hours": "Понедельник - Пятница: 09:00 - 18:00 Суббота: 09:00 - 13:00",
     "address_title": "Наш адрес",
     "our_address": "Ашхабад, Битарап Туркменистан Шоссе 183",
     "pageDoesntExist":"Упс! Страница, которую вы ищете, не существует.",
@@ -30,9 +30,30 @@
     "contacts":"Контакты",
     "apps":"Мобильные приложения",
     "socialLinks":"Мы в соц сетях",
-    "address":"Ашхабад, Проспект Битарап Туркменистан, 183"
+    "address":"Ашхабад, Проспект Битарап Туркменистан, 183",
+    "links":"Дополнительно"
+
 
   },
+  "auction":{
+  "auctionTitle":"Аукцион",
+  "createdDate":"Дата публикация:",
+  "alreadyParticipated":"Вы уже участвуете" ,
+  "join":"Участвовать",
+  "price":"Цена",
+  "auctionDesc":"Регистрируйтесь чтобы участвовать",
+  "state":"Вид:",
+  "startPrice":"Первоначальная цена:",
+  "bidPrice":"Размер ставки",
+  "toBid":"Сделайте ставку",
+  "alreadyBid":"Вы уже сделали ставку" ,
+  "new":"Новый",
+  "countDownDay":"День",
+  "countDownHour":"Час",
+  "countDownMinut":"Минут",
+  "countDownSecond":"Секунт"
+
+},
   "home":{
     "sameProducts":"Похожие товары",
     "writeRating":"Оставьте комментарии",
@@ -48,7 +69,9 @@
     "favourite":"Избранный",
     "barcode":"Баркод",
     "mainPage":"Главная страница",
-    "delivery":"Доставка"
+    "delivery":"Доставка",
+    "newGoods":"Новые Товары"
+
   },
   "howRegister":{
     "how-to-register":"Как зарегистрироваться",
