--- a/src/language/ru/translation.json
+++ b/src/language/ru/translation.json
@@ -73,6 +73,38 @@
     "newGoods":"Новые Товары"
 
   },
+  "basket":{
+    "noProduct":"Ваша корзина пустa",
+    "basket":"Корзина",
+    "clearAll":"Убрать все",
+    "total":"Сумма:",
+    "coupon":"Код купона",
+    "couponCode":"Введите код купона",
+    "paymentType":"Выберите тип оплаты",
+    "nagt":"Наличными",
+    "card":"Оплата картой через терминал",
+    "altyn":"Oнлайн оплата (Altyn Asyr)",
+    "order":"Заказать"
+  },
+  "login":{
+    "myProfile":"Мой профиль",
+    "logout":"Выйти",
+    "login":"Войти",
+    "register":"Регистрация",
+    "phoneNumber":"Телефон",
+    "email":"Почта",
+    "successProvided":"Успешно подтверждён!",
+    "forgotPass":"Забыли пароль?",
+    "Login":"Войти",
+    "noAccount":"Нет аккаунта",
+    "registerFor":"войти",
+    "wantTogetNotify":"Хотите получить уведомление?",
+    "Register":"Регистрация",
+    "alreadyHaveAccount":"Уже есть аккаунт?",
+    "imageUpload":"Загрузите фотографию",
+    "sendOTP":"Отправить код подтверждение",
+    "resend":"Отправить заново "
+  },
   "howRegister":{
     "how-to-register":"Как зарегистрироваться",
     "htoDesc":"Принцип регистрации очень прост:<1/>Нажмите на человечка в правом верхнем углу. Выйдет окно, в котором Вам нужно указать свои инициалы, контактный номер и адрес электронной почты.  Далее нажать на кнопку «Регистрация»<1/>Готово!"
