product code reviewed

--- a/src/language/eng/translation.json
+++ b/src/language/eng/translation.json
@@ -46,7 +46,7 @@
   "header": {
     "header_subtitle": "Electronics and Household Appliances",
     "work_time": "Working Hours",
-    "work_hours": "Monday - Friday: 09:00 AM - 06:00 PM Saturday: 09:00 AM - 01:00 PM",
+    "work_hours": "Monday - Friday: 09:00 AM - 06:00 PM <1/>Saturday: 09:00 AM - 01:00 PM",
     "address_title": "Our Address",
     "our_address": "Ashgabat, Bitarap Turkmenistan Street 183",
     "pageDoesntExist":"Oops! The page you`re looking for doesn`t exist.",
