--- a/src/language/ru/translation.json
+++ b/src/language/ru/translation.json
@@ -16,7 +16,7 @@
   "header": {
     "header_subtitle": "Электроника и бытовая техника",
     "work_time": "Рабочие часы",
-    "work_hours": "Понедельник - Пятница: 09:00 - 18:00 Суббота: 09:00 - 13:00",
+    "work_hours": "Понедельник - Пятница: 09:00 - 18:00 <1/>Суббота: 09:00 - 13:00",
     "address_title": "Наш адрес",
     "our_address": "Ашхабад, Битарап Туркменистан Шоссе 183",
     "pageDoesntExist":"Упс! Страница, которую вы ищете, не существует.",
