--- a/src/language/tm/translation.json
+++ b/src/language/tm/translation.json
@@ -16,7 +16,7 @@
   "header": {
     "header_subtitle": "Elektronika we öý enjamlary",
     "work_time": "Iş wagty",
-    "work_hours": "Duşenbe - Anna: 09:00 - 18:00 Şenbe: 09:00 - 13:00",
+    "work_hours": "Duşenbe - Anna: 09:00 - 18:00<1/> Şenbe: 09:00 - 13:00",
     "address_title": "Salgymyz",
     "our_address": "Aşgabat, Bitarap Türkmenistan şaýoly 183",
     "pageDoesntExist":"Gözleýan sahypaňyz ýok.",
