--- a/src/language/ru/translation.json
+++ b/src/language/ru/translation.json
@@ -21,9 +21,9 @@
     "our_address": "Ашхабад, Битарап Туркменистан Шоссе 183",
     "pageDoesntExist":"Упс! Страница, которую вы ищете, не существует.",
     "how_to_register":"Как зарегистрироваться",
-    "search":"Поиск..."
-
-
+    "search":"Поиск...",
+   "dosearch":"Поиск",
+    "clearFilter":"Очистить"
   },
   "footer":{
     "footerFastHelp":"Помощь",
@@ -70,8 +70,10 @@
     "barcode":"Баркод",
     "mainPage":"Главная страница",
     "delivery":"Доставка",
-    "newGoods":"Новые Товары"
-
+    "newGoods":"Новые Товары",
+    "noItem":"Нет товара",
+    "brand":"Бренд",
+    "setFilters":"Подбор по параметрам и фильтрам"
   },
   "basket":{
     "noProduct":"Ваша корзина пустa",
@@ -165,7 +167,8 @@
   "descFour":"Подарите близкому человеку подарочный сертификать из нашего магазина и будьте уверены, что он сам выберет себе подарок по душе и будет помнить ваш знак внимания!"
 },
 "products":{
-  "nagt":"Количество"
+  "nagt":"Кол",
+  "noProperty":"Нет свойств"
 },
 "goodOfWeek":{
   "quality":"Качество в деталях",
