[register login & category select react filter]

--- a/src/language/eng/translation.json
+++ b/src/language/eng/translation.json
@@ -186,6 +186,8 @@
 },
 "partners":{
   "ourPartners":"Our Partners"
-}
+},
+"verifySend":"Verification code has been sent to",
+"verify":"Verify"
 
 }
