--- a/src/language/ru/translation.json
+++ b/src/language/ru/translation.json
@@ -189,7 +189,9 @@
 },
 "partners":{
   "ourPartners":"Наши Партнеры"
-}
+},
+"verifySend":"Код подтверждение отправлен на",
+"verify":"Подтвердить"
   
 }
 
