--- a/src/language/ru/translation.json
+++ b/src/language/ru/translation.json
@@ -74,7 +74,9 @@
     "newGoods":"Новые Товары",
     "noItem":"Нет товара",
     "brand":"Бренд",
-    "setFilters":"Подбор по параметрам и фильтрам"
+    "setFilters":"Подбор по параметрам и фильтрам",
+        "feedback":"Введите отзыв...",
+    "addButton":"Добавить"
   },
   "basket":{
     "noProduct":"Ваша корзина пустa",
