--- a/src/language/ru/translation.json
+++ b/src/language/ru/translation.json
@@ -29,9 +29,10 @@
     "footerFastHelp":"Помощь",
     "contacts":"Контакты",
     "apps":"Мобильные приложения",
-    "socialLinks":"Мы в соц сетях",
+    "socialLinks":"Мы в соц. сетях",
     "address":"Ашхабад, Проспект Битарап Туркменистан, 183",
-    "links":"Дополнительно"
+    "links":"Дополнительно",
+    "phoneNumber":"Телефон"
 
 
   },
@@ -59,7 +60,7 @@
     "sameProducts":"Похожие товары",
     "writeRating":"Оставьте комментарии",
 
-    "discountedGoods":"Товары по Акции",
+    "discountedGoods":"Товары по акции",
     "offeredProducts":"Предлагаемые товары",
     "lastAddedProducts":"Последние добавленные товары",
 
@@ -71,12 +72,15 @@
     "barcode":"Баркод",
     "mainPage":"Главная страница",
     "delivery":"Доставка",
-    "newGoods":"Новые Товары",
+    "newGoods":"Новые товары",
     "noItem":"Нет товара",
     "brand":"Бренд",
     "setFilters":"Подбор по параметрам и фильтрам",
         "feedback":"Введите отзыв...",
-    "addButton":"Добавить"
+    "addButton":"Добавить",
+    "noProduct":"Ничего не найдено",
+    "addMore":"Посмотреть ещё",
+    "addToCompare":"Добавьте продукт для сравнения"
   },
   "basket":{
     "noProduct":"Ваша корзина пустa",
@@ -177,7 +181,7 @@
   "descFour":"Подарите близкому человеку подарочный сертификать из нашего магазина и будьте уверены, что он сам выберет себе подарок по душе и будет помнить ваш знак внимания!"
 },
 "products":{
-  "nagt":"Кол",
+  "nagt":"кол.",
   "noProperty":"Нет свойств"
 },
 "goodOfWeek":{
@@ -190,7 +194,7 @@
   "select2":"По убыванию цены"
 },
 "partners":{
-  "ourPartners":"Наши Партнеры"
+  "ourPartners":"Наши партнеры"
 },
 "verifySend":"Код подтверждение отправлен на",
 "verify":"Подтвердить"
